--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
       <div class="time-colon">
         <div class="time-text">
           <span class="num hour_num">08</span>
-          <span class="text">Hours</span>
+          <span class="text">Saat</span>
         </div>
         <span class="colon">:</span>
       </div>
       <div class="time-colon">
         <div class="time-text">
           <span class="num min_num">45</span>
-          <span class="text">Minutes</span>
+          <span class="text">Minut</span>
         </div>
         <span class="colon">:</span>
       </div>
       <div class="time-colon">
         <div class="time-text">
           <span class="num sec_num">06</span>
-          <span class="text">Seconds</span>
+          <span class="text">Sekund</span>
         </div>
         <span class="am_pm">AM</span>
       </div>
